--- a/src/components/NavigationItem.astro
+++ b/src/components/NavigationItem.astro
@@ -4,21 +4,25 @@ const { label, url, items } = Astro.props;
 ---
 
 <custom-navigation-item>
-	<Select
-		label={label}
-		value="auto"
-		options={[
-			{ label, selected: url === Astro.url.pathname, value: null },
-			...items.map((item) => {
-				return {
-					label: item.label,
-					selected: url === Astro.url.pathname,
-					value: item.url
+	{!items || items.length === 0
+		? <a class="stand-alone-link" href={url}>{label}</a>
+		:
+			<Select
+				label={label}
+				value="auto"
+				options={[
+					{ label, selected: url === Astro.url.pathname, value: null },
+					...items.map((item) => {
+						return {
+							label: item.label,
+							selected: url === Astro.url.pathname,
+							value: item.url
+						}
+					})]
 				}
-			})]
+				width="7.5em"
+			/>
 		}
-		width="7.5em"
-	/>
 </custom-navigation-item>
 
 <script>
@@ -45,3 +49,9 @@ const { label, url, items } = Astro.props;
 
 	customElements.define('custom-navigation-item', CustomNavigationItem);
 </script>
+
+<style>
+	.stand-alone-link {
+		text-decoration: none;
+	}
+</style>
