--- a/src/components/Overrides/SidebarSublist.astro
+++ b/src/components/Overrides/SidebarSublist.astro
@@ -1,5 +1,6 @@
 ---
-import { Badge, Icon } from '@astrojs/starlight/components';
+import { Icon } from '@astrojs/starlight/components';
+import Badge from './Badge.astro';
 
 // Add to allow for replacement Astro.props.sublist.map...
 // isNested == customProp to make filtering only used at the top level so that max loop is O(n)
