Add Basic Navigation + Content Collection Folders

--- a/src/components/NavigationItem.astro
+++ b/src/components/NavigationItem.astro
@@ -53,5 +53,6 @@ const { label, url, items } = Astro.props;
 <style>
 	.stand-alone-link {
 		text-decoration: none;
+		margin: 0 0 0 16px;
 	}
 </style>
