--- a/src/styles/hubs.css
+++ b/src/styles/hubs.css
@@ -8,3 +8,11 @@
 		var(--calypso-purple-dark)
 	);
 }
+
+.hub-page {
+	width: 100%;
+	height: 100%;
+}
+.calypso-background {
+	background-color: var(--calypso-gradient) !important;
+}
