Fix Collpase + Add Hybrid Architecture + sFUEL Pages

--- a/src/components/Overrides/SidebarSublist.astro
+++ b/src/components/Overrides/SidebarSublist.astro
@@ -56,7 +56,7 @@ let items = isNested ? sublist : sublist.filter((item) => {
 						</a>
 					) : (
 						<details
-							open={true}
+							open={!entry.collapsed}
 						>
 							<summary>
 								<span class="large">{entry.label}</span>
