--- a/src/components/Overrides/MobileMenuFooter.astro
+++ b/src/components/Overrides/MobileMenuFooter.astro
@@ -1,7 +1,8 @@
 ---
-import { LanguageSelect, ThemeSelect } from 'virtual:starlight/components';
+import { ThemeSelect } from 'virtual:starlight/components';
 import Navigation from "../Navigation.astro";
 import type { Props } from '../props';
+import { WalletLayout } from '../WalletLayout';
 ---
 
 <div class="mobile-preferences sl-flex">
@@ -10,7 +11,10 @@ import type { Props } from '../props';
 	</div>
 	<div class="sl-flex">
 		<ThemeSelect {...Astro.props} />
-		<LanguageSelect {...Astro.props} />
+		<!-- <LanguageSelect {...Astro.props} /> -->
+	</div>
+	<div class="sl-flex">
+		<WalletLayout client:load />
 	</div>
 </div>
 
