Remove Unused APIs Tempoarily, Fix Footer

--- a/src/components/GasAndTokens/styles.css
+++ b/src/components/GasAndTokens/styles.css
@@ -2,3 +2,14 @@ table,
 tr {
 	width: 100%;
 }
+
+.request-token-button,
+.sfuel-button {
+	background: none;
+	border: none;
+
+	&:hover {
+		cursor: pointer;
+		background: grey;
+	}
+}
