Improve Tool Layout, Resolve expressive-code css issues

--- a/src/styles/overrides.css
+++ b/src/styles/overrides.css
@@ -35,3 +35,17 @@
 .card-grid a {
 	min-height: 200px !important;
 }
+
+pre,
+.expressive-code figure .copy {
+	margin-top: 0 !important;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	align-items: center;
+}
+
+.expressive-code figure .copy button {
+	width: 1.75rem;
+	height: 1.75rem;
+}
