--- a/src/components/Overrides/SidebarSublist.astro
+++ b/src/components/Overrides/SidebarSublist.astro
@@ -13,7 +13,7 @@ const { sublist, isNested } = Astro.props;
  * 
  * Note - Temporary hack until multiple sidebars is officially added to Astro
  */
-let items = isNested ? sublist : sublist.filter((item) => {
+let items = isNested ? sublist : sublist.filter((item: any) => {
 	if (item.type === "group") {
 		for (const e of item.entries) {
 			if (e.type === "group") {
@@ -26,16 +26,17 @@ let items = isNested ? sublist : sublist.filter((item) => {
 					if (e2.isCurrent) return item;
 				}
 			}
+
 			if (e.isCurrent) return item;
 		}
 	}
 });
 ---
 
-<ul class:list={{ 'top-level': false }}>
+<ul class:list={{ 'top-level': !isNested }}>
 	{
 		// Replaced Astro.props.sublist.map...
-		items.map((entry) => {
+		items.map((entry: any) => {
 			return (
 				<li>
 					{entry.type === 'link' ? (
@@ -56,7 +57,8 @@ let items = isNested ? sublist : sublist.filter((item) => {
 						</a>
 					) : (
 						<details
-							open={!entry.collapsed}
+							// open={entry.isCurrent || !entry.collapsed}
+							open={true}
 						>
 							<summary>
 								<span class="large">{entry.label}</span>
