--- a/src/styles/overrides.css
+++ b/src/styles/overrides.css
@@ -53,3 +53,8 @@ pre,
 .site-title:where(.astro-m46x6ez3) span {
 	display: none;
 }
+
+a:where(.astro-s3zckhgk):hover,
+a:where(.astro-s3zckhgk):focus {
+	background-color: #afc8ff30;
+}
