--- a/src/components/Overrides/SidebarSublist.astro
+++ b/src/components/Overrides/SidebarSublist.astro
@@ -135,7 +135,7 @@ let items = isNested ? sublist : sublist.filter((item: any) => {
 
 	a:hover,
 	a:focus {
-		color: var(--sl-color-white);
+		background-color: #afc8ff30;
 	}
 
 	[aria-current='page'],
