Remove Wagmi, Rainbowkit

--- a/src/components/Overrides/PageFrame.astro
+++ b/src/components/Overrides/PageFrame.astro
@@ -2,7 +2,7 @@
 import { MobileMenuToggle } from 'virtual:starlight/components';
 import type { Props } from '../props';
 import { ToastContainer } from 'react-toastify';
-const { hasSidebar, labels } = Astro.props;
+const { hasSidebar } = Astro.props;
 ---
 
 <div class="page sl-flex">
