quick start broken links fix

--- a/src/components/Overrides/SidebarSublist.astro
+++ b/src/components/Overrides/SidebarSublist.astro
@@ -134,10 +134,11 @@ let items = isNested ? sublist : sublist.filter((item: any) => {
 		line-height: 1.4;
 	}
 
-	a:hover,
-	a:focus {
-		background-color: #afc8ff30;
-	}
+    a:hover,
+    a:focus {
+        color: var(--sl-color-white);
+        background-color: var(--sl-color-hover);
+    }
 
 	[aria-current='page'],
 	[aria-current='page']:hover,
