--- a/src/components/GasAndTokens/styles.css
+++ b/src/components/GasAndTokens/styles.css
@@ -13,3 +13,21 @@ tr {
 		background: grey;
 	}
 }
+
+.request-token-button_2 {
+	outline: 0;
+	cursor: pointer;
+	border-radius: 8px;
+	background-color: #0f111100;
+	border: 1px solid #d5d9d9;
+	font-size: 15px;
+	height: 31px;
+	text-align: center;
+	font-weight: 800;
+	color: var(--sl-color-white);
+
+	&:hover {
+		background-color: var(--sl-color-hover);
+		border-color: #d5d9d9;
+	}
+}
