--- a/src/styles/overrides.css
+++ b/src/styles/overrides.css
@@ -11,6 +11,8 @@
 	--sl-color-gray-5: #383838;
 	--sl-color-gray-6: #272727;
 	--sl-color-black: #181818;
+	--sl-color-hover: #a4bff760;
+	--sl-color-header-hover: #afc8ff;
 }
 /* Light mode colors. */
 :root[data-theme="light"] {
@@ -26,6 +28,8 @@
 	--sl-color-gray-6: #eeeeee;
 	--sl-color-gray-7: #f6f6f6;
 	--sl-color-black: #ffffff;
+	--sl-color-hover: #2151ff29;
+	--sl-color-header-hover: #2150ff;
 }
 
 .Toastify {
@@ -54,13 +58,10 @@ pre,
 	display: none;
 }
 
-
-.content:where(.astro-ml6ntd6l) code .ec-line{
+.content:where(.astro-ml6ntd6l) code .ec-line {
 	margin-top: 0rem;
 }
 
-
-/*a:where(.astro-s3zckhgk):hover,
-a:where(.astro-s3zckhgk):focus {
-	background-color: #afc8ff30;
-}*/
+.right-sidebar-panel:where(.astro-pb3aqygn) a:hover {
+	background-color: var(--sl-color-hover);
+}
