structure payments + nfts

--- a/src/components/NavigationItem.astro
+++ b/src/components/NavigationItem.astro
@@ -52,8 +52,14 @@ const { label, url, items } = Astro.props;
 
 <style>
 	.stand-alone-link {
+		color: #c2c2c2;
+		font-weight: bold;
 		text-decoration: none;
 		margin: 0 0 0 16px;
 	}
+
+	.stand-alone-link:hover {
+        color: #afc8ff;
+    }
 
 </style>
