Resolve Custom Paths for Overriden Components

--- a/src/components/Overrides/PageFrame.astro
+++ b/src/components/Overrides/PageFrame.astro
@@ -1,6 +1,6 @@
 ---
-import { MobileMenuToggle } from 'virtual:starlight/components';
-import type { Props } from '../props';
+import MobileMenuToggle from 'virtual:starlight/components/MobileMenuToggle';
+import type { Props } from '@astrojs/starlight/props';
 import { ToastContainer } from 'react-toastify';
 const { hasSidebar } = Astro.props;
 ---
