--- a/src/components/Overrides/Header.astro
+++ b/src/components/Overrides/Header.astro
@@ -1,13 +1,10 @@
 ---
-import type { Props } from '../props';
+import type { Props } from '@astrojs/starlight/props';
 
-import {
-	LanguageSelect,
-	Search,
-	SiteTitle,
-	SocialIcons,
-	ThemeSelect,
-} from 'virtual:starlight/components';
+import Search from "virtual:starlight/components/Search";
+import SiteTitle from "virtual:starlight/components/SiteTitle";
+import SocialIcons from "virtual:starlight/components/SocialIcons";
+import ThemeSelect from "virtual:starlight/components/ThemeSelect";
 
 import Navigation from "../Navigation.astro";
 ---
