--- a/src/components/Overrides/MobileMenuFooter.astro
+++ b/src/components/Overrides/MobileMenuFooter.astro
@@ -1,5 +1,5 @@
 ---
-import { ThemeSelect } from 'virtual:starlight/components';
+import ThemeSelect from 'virtual:starlight/components/ThemeSelect';
 import Navigation from "../Navigation.astro";
 import type { Props } from '../props';
 ---
