Migrate SKALE Chain Wallet

--- a/src/components/Mermaid.astro
+++ b/src/components/Mermaid.astro
@@ -8,5 +8,9 @@ const { code } = Astro.props;
 <style>
 pre.mermaid {
 	border: none;
+
+	.messageText {
+		fill: var(--mermaid-text-color) !important;		
+	}
 }
 </style>
