--- a/src/styles/overrides.css
+++ b/src/styles/overrides.css
@@ -14,6 +14,7 @@
 	--sl-color-black: #181818;
 	--sl-color-hover: #a4bff760;
 	--sl-color-header-hover: #afc8ff;
+	--mermaid-text-color: var(--sl-color-white);
 }
 /* Light mode colors. */
 :root[data-theme="light"] {
@@ -31,6 +32,7 @@
 	--sl-color-black: #ffffff;
 	--sl-color-hover: #2151ff29;
 	--sl-color-header-hover: #2150ff;
+	--mermaid-text-color: var(--sl-color-white);
 }
 
 .Toastify {
