--- a/src/components/Overrides/PageFrame.astro
+++ b/src/components/Overrides/PageFrame.astro
@@ -21,7 +21,7 @@ const { hasSidebar } = Astro.props;
 	}
 	<div class="main-frame"><slot /></div>
 	<footer class="footer">
-		<p>&copy; 2023-Present Dirt Road Development, SKALE Labs</p>
+		<p>&copy; 2023-Present SKALE Labs</p>
 	</footer>
 	<ToastContainer
 	  position="bottom-right"
