--- a/src/components/NavigationItem.astro
+++ b/src/components/NavigationItem.astro
@@ -12,7 +12,7 @@ const { label, url, items } = Astro.props;
 				value="auto"
 				options={[
 					{ label, selected: url === Astro.url.pathname, value: null },
-					...items.map((item) => {
+					...items.map((item: any) => {
 						return {
 							label: item.label,
 							selected: url === Astro.url.pathname,
