Set off-black hex

--- a/src/styles/overrides.css
+++ b/src/styles/overrides.css
@@ -11,7 +11,7 @@
 	--sl-color-gray-4: #585858;
 	--sl-color-gray-5: #383838;
 	--sl-color-gray-6: #272727;
-	--sl-color-black: #000;
+	--sl-color-black: #0e1111;
 	--sl-color-hover: #a4bff760;
 	--sl-color-header-hover: #afc8ff;
 	--sl-text-sm: 0.925rem;
