--- a/src/components/NavigationItem.astro
+++ b/src/components/NavigationItem.astro
@@ -52,14 +52,14 @@ const { label, url, items } = Astro.props;
 
 <style>
 	.stand-alone-link {
-		color: #c2c2c2;
+		color: var(--sl-color-gray-2);
 		font-weight: bold;
 		text-decoration: none;
 		margin: 0 0 0 16px;
 	}
 
 	.stand-alone-link:hover {
-        color: #afc8ff;
+        color: var(--sl-color-header-hover);
     }
 
 </style>
