--- a/src/styles/overrides.css
+++ b/src/styles/overrides.css
@@ -75,3 +75,10 @@ iframe {
 	aspect-ratio: 16/9;
 	width: 100%;
 }
+
+.center-image-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
