--- a/src/components/Tool/ToolLayout.astro
+++ b/src/components/Tool/ToolLayout.astro
@@ -1,9 +1,11 @@
 ---
 import AdditionalDocs from "./ToolAdditionalDocs.astro";
 import Intro from "./ToolIntro.astro";
+import Availability from "./ToolAvailability.astro";
 const {
     introParagraph,
     toolName,
+    availability,
     toolLink,
     toolDocsLink
 } = Astro.props;
@@ -14,6 +16,7 @@ const {
         <Intro
             content={introParagraph}
         />
+        <Availability availability={availability}/>
         <slot />
         <AdditionalDocs
             toolDocsLink={toolDocsLink}
