--- a/src/components/Overrides/PageFrame.astro
+++ b/src/components/Overrides/PageFrame.astro
@@ -6,10 +6,10 @@ import Banner from '../Banner.astro';
 
 const { hasSidebar } = Astro.props;
 
-const showBanner = true; // Set to true or false
+const showBanner = false;
 ---
 <div class="page sl-flex">
-	{showBanner && <Banner showBanner={showBanner} />}
+	{showBanner && <Banner/>}
 	<header class={`header ${!showBanner ? 'header-no-banner' : ''}`}>
 		<slot name="header"/>
 	</header>
