Quick Verbiage Fix

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,9 +1,9 @@
   <div class="banner">
       <p>
           Solidity Compatibility Note: 
-          <span class="highlight_1"> compiler version ≤ </span> 
+          <span class="highlight_1"> Solidity Version ≤ </span> 
           <span class="highlight_2">0.8.24 </span> | 
-          <span class="highlight_1"> EVM Version ≤ </span> 
+          <span class="highlight_1"> EVM Compiler Version ≤ </span> 
           <span class="highlight_2">Shanghai</span>
       </p>	
   </div>
