--- a/src/components/Overrides/PageFrame.astro
+++ b/src/components/Overrides/PageFrame.astro
@@ -6,7 +6,7 @@ import Banner from '../Banner.astro';
 
 const { hasSidebar } = Astro.props;
 
-const showBanner = false;
+const showBanner = true;
 ---
 <div class="page sl-flex">
 	{showBanner && <Banner/>}
