Banner Bug Fixs

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,4 +1,4 @@
-  <div class="banner">
+<div class="banner">
       <p>
           Solidity Compatibility Note: 
           <span class="highlight_1"> Solidity Version ≤ </span> 
@@ -29,7 +29,7 @@
 		background-color:var(--sl-color-text-accent); 
 		width: 100%; 
 		text-align: center; 
-		font-size: 1rem; 
+		font-size: clamp(0.55rem, 2vw, 1rem); 
 		padding: 0.5rem 1rem;
 		position: fixed;
 		top: 0; 
