--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,39 +1,40 @@
-  <div class="banner">
-      <p>
-          Solidity Compatibility Note: 
-          <span class="highlight_1"> Solidity Version ≤ </span> 
-          <span class="highlight_2">0.8.24 </span> | 
-          <span class="highlight_1"> EVM Compiler Version ≤ </span> 
-          <span class="highlight_2">Shanghai</span>
-      </p>	
-  </div>
+<div class="banner">
+	<p>
+		Solidity Compatibility Note: 
+		<span class="highlight_1"> Solidity Version ≤ </span> 
+		<span class="highlight_2">0.8.24 </span> | 
+		<span class="highlight_1"> EVM Compiler Version ≤ </span> 
+		<span class="highlight_2">Shanghai</span>
+	</p>  
+</div>
 
 <style>
-    
-	.banner p {
-		color: black; 
-	}
+  
+  .banner p {
+	  color: black; 
+  }
 
-	.banner p .highlight_2 {
-		color: rgb(15, 22, 216);
-		font-weight: bold; 
-	}
+  .banner p .highlight_2 {
+	  color: rgb(15, 22, 216);
+	  font-weight: bold; 
+  }
 
 
-	.banner p .highlight_1 {
-		color: rgb(0, 0, 0);
-		font-weight: bold; 
-	}
+  .banner p .highlight_1 {
+	  color: rgb(0, 0, 0);
+	  font-weight: bold; 
+  }
 
-	.banner {
-		background-color:var(--sl-color-text-accent); 
-		width: 100%; 
-		text-align: center; 
-		font-size: 1rem; 
-		padding: 0.5rem 1rem;
-		position: fixed;
-		top: 0; 
-		z-index: 10; 
-	}
+  .banner {
+	  background-color:var(--sl-color-text-accent); 
+	  width: 100%; 
+	  text-align: center; 
+	  height: 4rem;
+	  font-size: clamp(0.6rem, 2vw, 1rem); 
+	  padding: 0.5rem 1rem;
+	  position: fixed;
+	  top: 0; 
+	  z-index: 10; 
+  }
 
 </style>
