--- a/src/components/Overrides/PageFrame.astro
+++ b/src/components/Overrides/PageFrame.astro
@@ -1,5 +1,5 @@
 ---
-import MobileMenuToggle from 'virtual:starlight/components/MobileMenuToggle';
+import MobileMenuToggle from './MobileMenuToggle.astro';
 import type { Props } from '@astrojs/starlight/props';
 import { ToastContainer } from 'react-toastify';
 import Banner from '../Banner.astro';
@@ -9,125 +9,135 @@ const { hasSidebar } = Astro.props;
 const showBanner = true;
 ---
 <div class="page sl-flex">
-	{showBanner && <Banner/>}
-	<header class={`header ${!showBanner ? 'header-no-banner' : ''}`}>
-		<slot name="header"/>
-	</header>
-	{
-		hasSidebar && (
-			<nav class="sidebar">
-				<MobileMenuToggle {...Astro.props} />
-				<div id="starlight__sidebar" class="sidebar-pane">
-					<div class={`sidebar-content sl-flex ${showBanner ? 'sidebar-content-no-banner' : ''}`}>
-						<slot name="sidebar" />
-					</div>
-				</div>
-			</nav>
-		)
-	}
-	<div class={`main-frame ${!showBanner ? 'main-frame-no-banner' : ''}`}>
-		<slot />
-	</div>
-	<footer class="footer">
-		<p>&copy; 2023-Present SKALE Labs</p>
-	</footer>
-	<ToastContainer
-	  position="bottom-right"
-	  autoClose={5000}
-	  hideProgressBar={false}
-	  newestOnTop={false}
-	  closeOnClick
-	  rtl={false}
-	  pauseOnFocusLoss
-	  draggable
-	  pauseOnHover
-	  theme="dark"
-	  client:load
-	/>
+    {showBanner && <Banner/>}
+    <header class={`header ${!showBanner ? 'header-no-banner' : ''}`}>
+        <slot name="header"/>
+    </header>
+    {
+        hasSidebar && (
+            <nav class="sidebar">
+                <MobileMenuToggle showBanner={showBanner} {...Astro.props} />
+                <div id="starlight__sidebar" class="sidebar-pane">
+                    <div class={`sidebar-content sl-flex ${showBanner ? 'sidebar-content-no-banner' : ''}`}>
+                        <slot name="sidebar" />
+                    </div>
+                </div>
+            </nav>
+        )
+    }
+    <div class={`main-frame ${!showBanner ? 'main-frame-no-banner' : ''}`}>
+        <slot />
+    </div>
+    <footer class="footer">
+        <p>&copy; 2023-Present SKALE Labs</p>
+    </footer>
+    <ToastContainer
+      position="bottom-right"
+      autoClose={5000}
+      hideProgressBar={false}
+      newestOnTop={false}
+      closeOnClick
+      rtl={false}
+      pauseOnFocusLoss
+      draggable
+      pauseOnHover
+      theme="dark"
+      client:load
+    />
 </div>
 
 <style>
-	.page {
-		flex-direction: column;
-		min-height: 100vh;
-		height: auto;
-		position: relative;
-	}
+    .page {
+        flex-direction: column;
+        min-height: 100vh;
+        height: auto;
+        position: relative;
+    }
 
-	.header {
-		z-index: 20; 
-		position: fixed; 
-		top: 2.5rem;
-		inset-inline-start: 0;
-		width: 100%; 
-		height: var(--sl-nav-height); 
-		border-bottom: 1px solid var(--sl-color-hairline-shade);
-		padding: var(--sl-nav-pad-y) var(--sl-nav-pad-x);
-		background-color: var(--sl-color-bg-nav);
-	}
+    .header {
+        z-index: var(--sl-z-index-navbar); 
+        position: fixed; 
+        top: 2.5rem;
+        inset-inline-start: 0;
+        width: 100%; 
+        height: var(--sl-nav-height); 
+        border-bottom: 1px solid var(--sl-color-hairline-shade);
+        padding: var(--sl-nav-pad-y) var(--sl-nav-pad-x);
+        background-color: var(--sl-color-bg-nav);
+    }
 
-	.header-no-banner {
-		top: 0;
-	}
+    :global([data-has-sidebar]) .header {
+        padding-inline-end: calc(var(--sl-nav-gap) + var(--sl-nav-pad-x) + var(--sl-menu-button-size));
+    }
 
-	.main-frame {
-		padding-top: calc(var(--sl-nav-height) + 2.5rem);
-		padding-inline-start: var(--sl-content-inline-start);
-	}
+    .sidebar-pane {
+        visibility: var(--sl-sidebar-visibility, hidden);
+        position: fixed;
+        z-index: var(--sl-z-index-menu);
+        inset-block: 0;
+        inset-inline-start: 0;
+        padding-top: var(--sl-nav-height);
+        width: 100%;
+        background-color: var(--sl-color-black);
+        overflow-y: auto;
+    }
 
-	.main-frame-no-banner {
-		padding-top: var(--sl-nav-height);
-	}
+    :global([aria-expanded='true']) ~ .sidebar-pane {
+        --sl-sidebar-visibility: visible;
+    }
 
-	.footer {
-		position: absolute;
-		bottom: -50px;
-		left: 35%;
-		right: 35%;
-		height: 100px;
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: center;
-	}
 
-	.sidebar-pane {
-		visibility: var(--sl-sidebar-visibility, hidden);
-		position: fixed;
-		z-index: var(--sl-z-index-menu);
-		inset-block: 0;
-		inset-inline-start: 0;
-		padding-top: var(--sl-nav-height);
-		width: 100%;
-		background-color: var(--sl-color-black);
-		overflow-y: auto;
-	}
+    .header-no-banner {
+        top: 0;
+    }
 
-	.sidebar-content {
-		height: 100%;
-		min-height: max-content;
-		padding: 1rem var(--sl-sidebar-pad-x) 0;
-		flex-direction: column;
-		gap: 1rem;
-	}
+    .main-frame {
+        padding-top: calc(var(--sl-nav-height) + 2.5rem);
+        padding-inline-start: var(--sl-content-inline-start);
+    }
 
-	.sidebar-content-no-banner {
-		padding-top: var(--sl-nav-height);
-	}
+    .main-frame-no-banner {
+        padding-top: var(--sl-nav-height);
+    }
 
-	:global([data-has-sidebar]) .header {
-		padding-inline-end: calc(var(--sl-nav-gap) + var(--sl-nav-pad-x) + var(--sl-menu-button-size));
-	}
+    .sidebar-no-banner {
+        top: calc((var(--sl-nav-height) + var(--sl-menu-button-size)) / 1.7);
+    }
 
-	@media (min-width: 50rem) {
-		:global([data-has-sidebar]) .header {
-			padding-inline-end: var(--sl-nav-pad-x);
-		}
-		.sidebar-pane {
-			--sl-sidebar-visibility: visible;
-			width: var(--sl-sidebar-width);
-			background-color: var(--sl-color-bg-sidebar);
-			border-inline-end: 1px solid var(--sl-color-hairline-shade);
-		}
-	}
+    .footer {
+        position: absolute;
+        bottom: -50px;
+        left: 35%;
+        right: 35%;
+        height: 100px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .sidebar-content {
+        height: 100%;
+        min-height: max-content;
+        padding: 1rem var(--sl-sidebar-pad-x) 0;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .sidebar-content-no-banner {
+        padding-top: var(--sl-nav-height);
+    }
+
+
+    @media (min-width: 50rem) {
+        :global([data-has-sidebar]) .header {
+            padding-inline-end: var(--sl-nav-pad-x);
+        }
+        .sidebar-pane {
+            --sl-sidebar-visibility: visible;
+            width: var(--sl-sidebar-width);
+            background-color: var(--sl-color-bg-sidebar);
+            border-inline-end: 1px solid var(--sl-color-hairline-shade);
+        }
+    }
 </style>
