--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,5 +1,5 @@
 <div class="banner">
-	<p>
+	<p >
 		Solidity Compatibility Note: 
 		<span class="highlight_1"> Solidity Version ≤ </span> 
 		<span class="highlight_2">0.8.24 </span> | 
@@ -29,12 +29,15 @@
 	  background-color:var(--sl-color-text-accent); 
 	  width: 100%; 
 	  text-align: center; 
-	  height: 4rem;
+	  height: 2rem;
 	  font-size: clamp(0.6rem, 2vw, 1rem); 
 	  padding: 0.5rem 1rem;
 	  position: fixed;
 	  top: 0; 
 	  z-index: 10; 
+	  display: flex;
+	  align-items: center; 
+	  justify-content: center; 
   }
 
 </style>
