--- a/src/components/ToolsList/ToolsStyle.css
+++ b/src/components/ToolsList/ToolsStyle.css
@@ -44,7 +44,6 @@
 	overflow-wrap: anywhere;
 }
 
-/* Size variants */
 .small {
 	font-size: var(--sl-text-xs);
 	padding: 0.125rem 0.25rem;
@@ -60,7 +59,6 @@
 	padding: 0.225rem 0.45rem;
 }
 
-/* Color variants */
 .default {
 	--sl-color-bg-badge: var(--sl-badge-default-bg);
 	--sl-color-border-badge: var(--sl-badge-default-border);
@@ -99,7 +97,7 @@
 
 .icon-link-card {
 	display: flex;
-	flex-direction: column; /* Stack content vertically */
+	flex-direction: column;
 	gap: 0.75rem;
 	border: 1px solid var(--sl-color-gray-5);
 	border-radius: 0.5rem;
