--- a/src/components/ToolsList/ToolsStyle.css
+++ b/src/components/ToolsList/ToolsStyle.css
@@ -253,8 +253,12 @@
 }
 
 @media (min-width: 1200px) {
-	.card-grid {
+	.card-grid.is-main-tools-paige {
 		grid-template-columns: 1fr 1fr 1fr;
+		gap: 1.5rem;
+	}
+	.card-grid {
+		grid-template-columns: 1fr 1fr;
 		gap: 1.5rem;
 	}
 }
