Add Gasless Transactions Documentation

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -291,3 +291,15 @@
   h1 > code, h2 > code, h3 > code, h4 > code, h5 > code, h6 > code {
     font-size: .925em !important;
   }
+
+  msup,
+msub,
+munderover,
+mrow,
+mo,
+mn,
+mi,
+mfrac {
+	margin: 0 !important;
+  color: var(--sl-color-accent-high);
+}
