Add Access Control Documentation

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -309,7 +309,8 @@ mfrac {
 	color: var(--sl-color-accent-high);
 }
 /* If Not available, code blocks seem to stregh >80% of body width */
-.expressive-code {
+/*.expressive-code {
 	max-width: 80%;
 	width: 100%;
 }
+*/
